# cmake-learn

./: .gitignore  a.md  note.md
chap1/101first_cmake/: 101first_cmake.cpp  CMakeLists.txt
chap1/102cmake_lib/: CMakeLists.txt
chap1/102cmake_lib/test_xlog/: CMakePresets.json
chap1/102cmake_lib/xlog/: xlog.h
chap2/103message/: CMakeLists.txt  test_message.cpp
chap2/104test_ver/: CMakeLists.txt
chap2/105message_color/: CMakeLists.txt
chap2/106cmake_system_var/: CMakeLists.txt
chap2/106cmake_system_var/test_xlog/: CMakeLists.txt  test_xlog.cpp
chap2/106cmake_system_var/xlog/: CMakeLists.txt  xlog.cpp  xlog.h
chap2/107cmake_include/: CMakeLists.txt
chap2/108auto_search_h/: CMakeLists.txt  main.cpp
chap2/108auto_search_h/include/: xlog.h  xthread.hpp
chap2/108auto_search_h/src/: xlog.cpp  xthread.cc
